# TrafficSignRecognition

./: README.md
Caffe/code/: Makefile  Makefile.config
Caffe/code/python/: test_classification.py  test_single.py
Caffe/code/tools/extra/: parse_log.sh  plot_training_log.py.example  plot_training_log.py2.example
Caffe/data/: annotations_selected.json  ids_augmented.txt  ids_original.txt  ids_selected.txt
Caffe/data/marks/: genlist_original.txt  genlist_selected.txt
Caffe/data/other/: other_ids_augmented.txt  other_ids_original.txt  other_ids_selected.txt
Caffe/data/test/: test_ids_augmented.txt  test_ids_original.txt  test_ids_selected.txt
Caffe/data/train/: train_ids_augmented.txt  train_ids_original.txt  train_ids_selected.txt
Caffe/ipython/: data_show.ipynb
Caffe/script/: test.sh  train.sh
Caffe/script/log/: aux.txt  aux0.txt  aux1.txt  aux2.txt  aux3.txt  aux4.txt  train-2017-05-17-04-17-19.log.test  train-2017-05-17-04-17-19.log.train  train-2017-05-17-16-25-19.log.test  train-2017-05-17-16-25-19.log.train
CaffeMnistDemo/: Makefile.config  build_dependencies.sh
CaffeMnistDemo/data/mnist/: ParseMnistImage.py
CaffeMnistDemo/examples/mnist/: test_lenet.sh
TensorflowMnistDemo/: mnist_ReLU.py
utils/getROI/: CMakeLists.txt  main.cpp
utils/scipts/: GTSDB.py  anno_util.py  categorizeImg.py  deploy.py
